--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
@@ -40,6 +39,8 @@
     ]
   },
   "devDependencies": {
+    "eslint": "^7.31.0",
+    "eslint-plugin-react": "^7.24.0",
     "gh-pages": "^3.2.3"
   }
 }
